--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": "^9.6.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-flatpickr": "^3.10.13",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
     "react-media": "^1.10.0",
@@ -23,7 +24,9 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.2",
     "react-spinners": "^0.13.8",
+    "react-switch": "^7.0.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
