--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.3",
     "yup": "^1.1.1"
   },
