--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
+    "chart.js": "^4.3.0",
     "firebase": "^9.20.0",
     "formik": "^2.2.9",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "npm": "^9.6.5",
     "react": "^18.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-flatpickr": "^3.10.13",
     "react-hot-toast": "^2.4.0",
