--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "chart.js": "^4.3.0",
+    "fetch-jsonp": "^1.2.3",
     "firebase": "^9.20.0",
     "formik": "^2.2.9",
     "i18next": "^22.4.13",
